caso-3/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ${NAMESPACE}
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: ${NAMESPACE}
spec:
  selector:
    app: metabase
  ports:
    - port: 80
      targetPort: 3000
