caso-3/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-policy
  namespace: metabase
spec:
  podSelector:
    matchLabels:
      app: ingress-nginx
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: metabase
    ports:
    - protocol: TCP
      port: 3000

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metabase-app-policy
  namespace: metabase
spec:
  podSelector:
    matchLabels:
      app: metabase
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mysql
    ports:
    - protocol: TCP
      port: 3306

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-policy
  namespace: metabase
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: metabase
    ports:
    - protocol: TCP
      port: 3306
